apps/paperless-ngx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: paperless-ngx
      app.kubernetes.io/part-of: paperless-ngx
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: kustomize
        app.kubernetes.io/name: paperless-ngx
        app.kubernetes.io/part-of: paperless-ngx
    spec:
      nodeSelector:
        kubernetes.io/hostname: pj
      containers:
        - name: paperless-ngx
          image: ghcr.io/paperless-ngx/paperless-ngx:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: paperless-data
              mountPath: /usr/src/paperless/data
              subPath: data
            - name: paperless-data
              mountPath: /usr/src/paperless/media
              subPath: media
            - name: paperless-data
              mountPath: /usr/src/paperless/consume
              subPath: consume
            - name: paperless-data
              mountPath: /usr/src/paperless/export
              subPath: export
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1536Mi
      volumes:
        - name: paperless-data
          persistentVolumeClaim:
            claimName: paperless-data
