apps/paperless-ngx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless-ngx
  labels:
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
spec:
  clusterIP: 10.43.100.16
  selector:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/part-of: paperless-ngx
  ports:
    - port: 8000
      targetPort: 8000
